# law-chatbot-poc

./: .gitignore  politics.json  pyproject.toml  requirements.txt  role-setting.json  web_explorer.py  web_explorer_backup.py
WebRetrieverAccelerate/: MyAsyncHtmlLoader.py  my_web_research.py
